# conan-xerces-c

./: .travis.yml  AddPostfix.patch  CMakeLists.txt  FindXercesC.cmake  README.md  XMLDateTime.patch  appveyor.yml  build.patch  build.py  conanfile.py
src/src/xercesc/util/: version.rc.cmake.in
test_package/: CMakeLists.txt  conanfile.py
